boreal/tests/assets/invalid_files/compilation/invalid_identifier_use3.yar
import "pe"

rule c {
    condition:
        pe == 2
}

